Renamed resources with project prefix

--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="WPEditText">
-        <attr name="hint" format="reference"/>
-        <attr name="min_length" format="integer"/>
-        <attr name="valid_message" format="reference"/>
-        <attr name="invalid_message" format="reference"/>
-        <attr name="empty_message" format="reference"/>
-        <attr name="underline_color" format="reference"/>
-        <attr name="text_color" format="reference"/>
-        <attr name="hint_color" format="reference"/>
-        <attr name="header_icon" format="reference"/>
-        <attr name="type" format="enum">
+    <declare-styleable name="wpedittext__style">
+        <attr name="wpedittext__hint" format="reference"/>
+        <attr name="wpedittext__min_length" format="integer"/>
+        <attr name="wpedittext__valid_message" format="reference"/>
+        <attr name="wpedittext__invalid_message" format="reference"/>
+        <attr name="wpedittext__empty_message" format="reference"/>
+        <attr name="wpedittext__underline_color" format="reference"/>
+        <attr name="wpedittext__text_color" format="reference"/>
+        <attr name="wpedittext__hint_color" format="reference"/>
+        <attr name="wpedittext__header_icon" format="reference"/>
+        <attr name="wpedittext__type" format="enum">
             <enum name="alpha" value="0"/>
             <enum name="alphanumeric" value="1"/>
             <enum name="email" value="2"/>
